--- a/src/main/resources/templates/login/joinUserForm.html
+++ b/src/main/resources/templates/login/joinUserForm.html
@@ -84,9 +84,9 @@ $(function(){
 		//비밀번호
 		const password = document.getElementById("password").value.trim();
 		const password2 = document.getElementById("password2").value.trim();
-	  const pwPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/;
+	  const pwPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[^\w\s#$*])[\S]{8,}$/;
     	if (!pwPattern.test(password)) {
-      alert("비밀번호는 8자 이상이며, 영문 대문자, 소문자, 숫자, 특수문자를 모두 포함해야 합니다.");
+      alert("비밀번호는 8자 이상이며, 영문 대문자, 소문자, 숫자, 특수문자(공백, $#*제외)를 모두 포함해야 합니다.");
       isEverythingOk = false;
       return false;
     }
@@ -357,12 +357,13 @@ function ckEmailDupl(){
 function isRightPassword(){
 	document.getElementById('password').addEventListener('input', function(){
 		let passwordInput = document.getElementById('password');
-		const pwPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/;
+		const pwPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[^\w\s#$*])[\S]{8,}$/;
 		if(!pwPattern.test(passwordInput.value)){
-			console.log(pwPattern.test(passwordInput.value));
-			passwordInput.style.border = ''; //일단 아무색상 안줘 
+			passwordInput.style.border = '2px solid #f4361e'; 
+			document.querySelector('#passwordAlert').textContent = '비밀번호는 8자 이상, 대/소문자, 숫자, 특수문자(공백, #, $, * 제외)를 포함해야 합니다.';
 		} else {
 			passwordInput.style.border = '2px solid #18C65D';
+			document.querySelector('#passwordAlert').textContent = '';
 		}
 	});
 }
@@ -374,8 +375,10 @@ function chkPasswordOneNTwo(){
 		let password2 = document.getElementById('password2').value;
 		if(password != password2){
 			document.getElementById('password2').style.border = '2px solid red';
+			document.querySelector('#passwordAlert2').textContent = '비밀번호가 일치하지 않습니다.';
 		} else {
 			document.getElementById('password2').style.border = '2px solid #18C65D';
+			document.querySelector('#passwordAlert2').textContent = '';
 		}
 		
 	})
@@ -474,11 +477,13 @@ function isForYou(){
             <div class="form-group">
                 <label class="form-label">비밀번호</label>
                 <input type="password" id="password" name="password" class="form-input" placeholder="8~16자(영문 대소문자/숫자/특수문자, 모두 조합)" maxlength="16">
+                <span id="passwordAlert" style="margin-top: 5px; color: red; font-size: 12px;"></span>
             </div>
             
             <div class="form-group">
                 <label class="form-label">비밀번호 확인</label>
                 <input type="password" id="password2" class="form-input" placeholder="비밀번호 확인" maxlength="16">
+                <span id="passwordAlert2" style="margin-top: 5px; color: red; font-size: 12px;"></span>
             </div>
 
             <div class="form-group">
